--- a/src/content/covenants/Hestia.yaml
+++ b/src/content/covenants/Hestia.yaml
@@ -1,79 +1,17 @@
-name: Jayavarman II
+name: Hestia
 generals:
-  - Martinus
-  - Ly Thuong Kiet
-  - Tran Hung Dao
+- Flavius Aetius
+- Zucca
+- Poligenus
 attributes:
 - category: War Covenant
   type: personal
   buff:
-  - attribute: Attack
-    class: Mounted
-    condition:
-    - Against Monsters
+  - attribute: Marching_Speed
     value:
-      number: 15
+      number: 10
       unit: percentage
 - category: Cooperation Covenant
-  type: personal
-  buff:
-  - attribute: Defense
-    class: Mounted
-    condition:
-    - When_Rallying
-    value:
-      number: 5
-      unit: percentage
-- category: Cooperation Covenant
-  type: passive
-  buff:
-  - attribute: Training_Speed
-    value:
-      number: 5
-      unit: percentage
-- category: Peace Covenant
-  type: personal
-  buff:
-  - attribute: HP
-    class: Mounted
-    condition:
-    - Attacking
-    value:
-      number: 10
-      unit: percentage
-  - attribute: HP
-    class: Ground
-    condition:
-    - Attacking
-    value:
-      number: 10
-      unit: percentage
-- category: Peace Covenant
-  type: passive
-  buff:
-  - attribute: Training Capacity
-    class: Mounted
-    value:
-      number: 10
-      unit: percentage
-- category: Faith Covenant
-  type: personal
-  buff:
-  - attribute: HP
-    class: Mounted
-    condition:
-    - When_Rallying
-    value:
-      number: 10
-      unit: percentage
-  - attribute: Attack
-    class: Mounted
-    condition:
-    - When_Rallying
-    value:
-      number: 5
-      unit: percentage
-- category: Honor Covenant
   type: personal
   buff:
   - attribute: Attack
@@ -81,18 +19,61 @@ attributes:
     condition:
     - Marching
     value:
-      number: 15
+      number: 10
+      unit: percentage
+- category: Peace Covenant
+  type: passive
+  buff:
+  - attribute: Training_Speed
+    class: Mounted
+    value:
+      number: 5
+      unit: percentage
+- category: Faith Covenant
+  type: personal
+  buff:
+  - attribute: Defense
+    class: Mounted
+    condition:
+    - When_Rallying
+    value:
+      number: 10
+      unit: percentage
+- category: Faith Covenant
+  type: passive
+  buff:
+  - attribute: Attack
+    class: Mounted
+    condition:
+    - When_Rallying
+    value:
+      number: 10
+      unit: percentage
+- category: Honor Covenant
+  type: personal
+  buff:
+  - attribute: HP
+    class: Mounted
+    condition:
+    - Marching
+    value:
+      number: 10
       unit: percentage
 - category: Civilization Covenant
   type: personal
   buff:
-  - attribute: Attack
+  - attribute: Defense
     class: Mounted
+    condition:
+    - Marching
     value:
       number: 10
       unit: percentage
-  - attribute: March_Size_Capacity
+  - attribute: HP
+    class: Mounted
+    condition:
+    - Marching
     value:
-      number: 5
+      number: 10
       unit: percentage
       
