--- a/src/content/covenants/Mu Guiying.yaml
+++ b/src/content/covenants/Mu Guiying.yaml
@@ -1,18 +1,21 @@
-name: John Hunyadi
+name: Mu Guiying
 generals:
-  - Matthias I
-  - Jadwiga
-  - Suleiman the Magnificent
+  - Elektra
+  - Yue Fei
+  - Guan Yu
 attributes:
 - category: War Covenant
   type: personal
   buff:
-  - attribute: HP
-    class: Archers
+  - attribute: Attack
+    class: Siege
     value:
       number: 5
       unit: percentage
-  - attribute: HP
+- category: Cooperation Covenant
+  type: personal
+  buff:
+  - attribute: Defense
     class: Siege
     value:
       number: 5
@@ -20,58 +23,52 @@ attributes:
 - category: Cooperation Covenant
   type: passive
   buff:
-  - attribute: Deserter Capacity
+  - attribute: Hospital Capacity
     value:
-      number: 10
+      number: 5
       unit: percentage
 - category: Peace Covenant
   type: personal
   buff:
-  - attribute: Attack
+  - attribute: Defense
+    class: Siege
+    condition:
+    - When_Rallying
+    value:
+      number: 10
+      unit: percentage
+- category: Peace Covenant
+  type: passive
+  buff:
+  - attribute: Training Capacity
+    class: Siege
+    value:
+      number: 10
+      unit: percentage
+- category: Faith Covenant
+  type: personal
+  buff:
+  - attribute: HP
+    class: Siege
+    condition:
+    - When_Rallying
+    value:
+      number: 10
+      unit: percentage
+  - attribute: HP
     class: Siege
     value:
       number: 5
-      unit: percentage
-- category: Faith Covenant
-  type: passive
-  buff:
-  - attribute: HP
-    class: Archers
-    condition:
-    - Enemy
-    value:
-      number: 8
-      unit: percentage
-  - attribute: HP
-    class: Siege
-    condition:
-    - Enemy
-    value:
-      number: 8
       unit: percentage
 - category: Honor Covenant
   type: personal
   buff:
   - attribute: Attack
-    class: Archers
-    condition:
-    - When_Rallying
-    value:
-      number: 5
-      unit: percentage
-  - attribute: Attack
     class: Siege
     condition:
     - When_Rallying
     value:
-      number: 5
-      unit: percentage
-  - attribute: Attack
-    class: Siege
-    condition:
-    - When_Rallying
-    value:
-      number: 10
+      number: 15
       unit: percentage
 - category: Civilization Covenant
   type: personal
@@ -81,5 +78,10 @@ attributes:
     condition:
     - Marching
     value:
-      number: 15
+      number: 10
       unit: percentage
+  - attribute: March_Size_Capacity
+    value:
+      number: 5
+      unit: percentage
+      
