--- a/src/content/specialities/Fortune.yaml
+++ b/src/content/specialities/Fortune.yaml
@@ -5,7 +5,7 @@ attribute:
     buff:
       - condition:
           - Against Monsters
-        attribute: Double_Items_Drop_Rate
+        attribute: 'Double Items Drop Rate'
         value:
           number: 1
           unit: percentage
@@ -13,7 +13,7 @@ attribute:
     buff:
       - condition:
           - Against Monsters
-        attribute: Double_Items_Drop_Rate
+        attribute: 'Double Items Drop Rate'
         value:
           number: 2
           unit: percentage
@@ -21,7 +21,7 @@ attribute:
     buff:
       - condition:
           - Against Monsters
-        attribute: Double_Items_Drop_Rate
+        attribute: 'Double Items Drop Rate'
         value:
           number: 3
           unit: percentage
@@ -29,7 +29,7 @@ attribute:
     buff:
       - condition:
           - Against Monsters
-        attribute: Double_Items_Drop_Rate
+        attribute: 'Double Items Drop Rate'
         value:
           number: 3
           unit: percentage
@@ -37,7 +37,7 @@ attribute:
     buff:
       - condition:
           - Against Monsters
-        attribute: Double_Items_Drop_Rate
+        attribute: 'Double Items Drop Rate'
         value:
           number: 5
           unit: percentage
