--- a/src/content/generalConflictData/20231030-4.yml
+++ b/src/content/generalConflictData/20231030-4.yml
@@ -10,43 +10,39 @@ others:
   - Genghis Khan
   - King Arthur
 books:
-  - name: March Size Increase
+- book:
+    name: March Size Increase
     level: '1'
     buff:
       - attribute: Attack
-        condition:
-          - When not mine
-        class: Archers
         value:
           number: 3
           unit: percentage
-  - name: March Size Increase
+  condition: when not mine
+- book:
+    name: March Size Increase
     level: '2'
     buff:
       - attribute: Attack
-        condition:
-          - When not mine
-        class: Archers
         value:
           number: 6
           unit: percentage
-  - name: March Size Increase
+  condition: when not mine
+- book:
+    name: March Size Increase
     level: '3'
     buff:
       - attribute: Attack
-        condition:
-          - When not mine
-        class: Archers
         value:
           number: 9
           unit: percentage
-  - name: March Size Increase
+  condition: when not mine
+- book:
+    name: March Size Increase
     level: '4'
     buff:
       - attribute: Attack
-        condition:
-          - When not mine
-        class: Archers
         value:
           number: 12
           unit: percentage
+  condition: when not mine
