--- a/src/content/generalConflictData/mt3a.yml
+++ b/src/content/generalConflictData/mt3a.yml
@@ -13,67 +13,83 @@ others:
   - Honda Tadakatsu
   - Khalid
 books:
-  - name: Mounted Attack Increase
-    level: '1'
-    buff:
-      - attribute: Attack
-        class: Mounted
-        value:
-          number: 10
-          unit: percentage
-  - name: Mounted Attack Increase
-    level: '2'
-    buff:
-      - attribute: Attack
-        class: Mounted
-        value:
-          number: 15
-          unit: percentage
-  - name: Mounted Attack Increase
-    level: '3'
-    buff:
-      - attribute: Attack
-        class: Mounted
-        value:
-          number: 20
-          unit: percentage
-  - name: Mounted Attack Increase
-    level: '4'
-    buff:
-      - attribute: Attack
-        class: Mounted
-        value:
-          number: 25
-          unit: percentage
-  - name: Mounted HP Increase
-    level: '1'
-    buff:
-      - attribute: HP
-        class: Mounted
-        value:
-          number: 10
-          unit: percentage
-  - name: Mounted HP Increase
-    level: '2'
-    buff:
-      - attribute: HP
-        class: Mounted
-        value:
-          number: 15
-          unit: percentage
-  - name: Mounted HP Increase
-    level: '3'
-    buff:
-      - attribute: HP
-        class: Mounted
-        value:
-          number: 20
-          unit: percentage
-  - name: Mounted HP Increase
-    level: '4'
-    buff:
-      - attribute: HP
-        class: Mounted
-        value:
-          number: 25
-          unit: percentage
+  - book:
+      name: Mounted Attack Increase
+      level: '1'
+      buff:
+        - attribute: Attack
+          class: Mounted
+          value:
+            number: 10
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted Attack Increase
+      level: '2'
+      buff:
+        - attribute: Attack
+          class: Mounted
+          value:
+            number: 15
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted Attack Increase
+      level: '3'
+      buff:
+        - attribute: Attack
+          class: Mounted
+          value:
+            number: 20
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted Attack Increase
+      level: '4'
+      buff:
+        - attribute: Attack
+          class: Mounted
+          value:
+            number: 25
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted HP Increase
+      level: '1'
+      buff:
+        - attribute: HP
+          class: Mounted
+          value:
+            number: 10
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted HP Increase
+      level: '2'
+      buff:
+        - attribute: HP
+          class: Mounted
+          value:
+            number: 15
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted HP Increase
+      level: '3'
+      buff:
+        - attribute: HP
+          class: Mounted
+          value:
+            number: 20
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Mounted HP Increase
+      level: '4'
+      buff:
+        - attribute: HP
+          class: Mounted
+          value:
+            number: 25
+            unit: percentage
+    condition: all the time
