--- a/src/content/generalConflictData/ra4a.yml
+++ b/src/content/generalConflictData/ra4a.yml
@@ -9,43 +9,43 @@ others:
   - Gustavus Adolphus
   - Louis IX
 books:
-  - name: Ranged Defense Increase
-    level: '1'
-    buff:
-      - attribute: Defense
-        condition:
-          - When not mine
-        class: Archers
-        value:
-          number: 10
-          unit: percentage
-  - name: Ranged Defense Increase
-    level: '2'
-    buff:
-      - attribute: Defense
-        condition:
-          - When not mine
-        class: Archers
-        value:
-          number: 15
-          unit: percentage
-  - name: Ranged Defense Increase
-    level: '3'
-    buff:
-      - attribute: Defense
-        condition:
-          - When not mine
-        class: Archers
-        value:
-          number: 20
-          unit: percentage
-  - name: Ranged Defense Increase
-    level: '4'
-    buff:
-      - attribute: Defense
-        condition:
-          - When not mine
-        class: Archers
-        value:
-          number: 25
-          unit: percentage
+  - book:
+      name: Ranged Defense Increase
+      level: '1'
+      buff:
+        - attribute: Defense
+          class: Archers
+          value:
+            number: 10
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Ranged Defense Increase
+      level: '2'
+      buff:
+        - attribute: Defense
+          class: Archers
+          value:
+            number: 15
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Ranged Defense Increase
+      level: '3'
+      buff:
+        - attribute: Defense
+          class: Archers
+          value:
+            number: 20
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Ranged Defense Increase
+      level: '4'
+      buff:
+        - attribute: Defense
+          class: Archers
+          value:
+            number: 25
+            unit: percentage
+    condition: when not mine
