--- a/src/content/generalConflictData/gr4b.yml
+++ b/src/content/generalConflictData/gr4b.yml
@@ -6,35 +6,43 @@ others:
   - Trajan
   - Robert the Bruce
 books:
-  - name: Ground HP Increase
-    level: '1'
-    buff:
-      - attribute: HP
-        class: Ground
-        value:
-          number: 10
-          unit: percentage
-  - name: Ground HP Increase
-    level: '2'
-    buff:
-      - attribute: HP
-        class: Ground
-        value:
-          number: 15
-          unit: percentage
-  - name: Ground HP Increase
-    level: '3'
-    buff:
-      - attribute: HP
-        class: Ground
-        value:
-          number: 20
-          unit: percentage
-  - name: Ground HP Increase
-    level: '4'
-    buff:
-      - attribute: HP
-        class: Ground
-        value:
-          number: 25
-          unit: percentage
+  - book:
+      name: Ground HP Increase
+      level: '1'
+      buff:
+        - attribute: HP
+          class: Ground
+          value:
+            number: 10
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Ground HP Increase
+      level: '2'
+      buff:
+        - attribute: HP
+          class: Ground
+          value:
+            number: 15
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Ground HP Increase
+      level: '3'
+      buff:
+        - attribute: HP
+          class: Ground
+          value:
+            number: 20
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Ground HP Increase
+      level: '4'
+      buff:
+        - attribute: HP
+          class: Ground
+          value:
+            number: 25
+            unit: percentage
+    condition: all the time
