--- a/src/content/generalConflictData/mt10.yml
+++ b/src/content/generalConflictData/mt10.yml
@@ -3,43 +3,51 @@ members:
   - Aethelflaed
   - Caesar
 books:
-  - name: Monster Mounted Attack Increase
-    level: '1'
-    buff:
-      - attribute: Attack
-        condition:
-          - Against Monsters
-        class: Mounted
-        value:
-          number: 15
-          unit: percentage
-  - name: Monster Mounted Attack Increase
-    level: '2'
-    buff:
-      - attribute: Attack
-        condition:
-          - Against Monsters
-        class: Mounted
-        value:
-          number: 25
-          unit: percentage
-  - name: Monster Mounted Attack Increase
-    level: '3'
-    buff:
-      - attribute: Attack
-        condition:
-          - Against Monsters
-        class: Mounted
-        value:
-          number: 35
-          unit: percentage
-  - name: Monster Mounted Attack Increase
-    level: '4'
-    buff:
-      - attribute: Attack
-        condition:
-          - Against Monsters
-        class: Mounted
-        value:
-          number: 45
-          unit: percentage
+  - book:
+      name: Monster Mounted Attack Increase
+      level: '1'
+      buff:
+        - attribute: Attack
+          condition:
+            - Against Monsters
+          class: Mounted
+          value:
+            number: 15
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Monster Mounted Attack Increase
+      level: '2'
+      buff:
+        - attribute: Attack
+          condition:
+            - Against Monsters
+          class: Mounted
+          value:
+            number: 25
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Monster Mounted Attack Increase
+      level: '3'
+      buff:
+        - attribute: Attack
+          condition:
+            - Against Monsters
+          class: Mounted
+          value:
+            number: 35
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Monster Mounted Attack Increase
+      level: '4'
+      buff:
+        - attribute: Attack
+          condition:
+            - Against Monsters
+          class: Mounted
+          value:
+            number: 45
+            unit: percentage
+    condition: all the time
