--- a/src/content/generalConflictData/mt11.yml
+++ b/src/content/generalConflictData/mt11.yml
@@ -5,31 +5,39 @@ members:
 others:
   - Theodora
 books:
-  - name: Luck
+- book:
+    name: Luck
     level: '1'
     buff:
       - attribute: Double Items Drop Rate
         value:
           number: 5
           unit: percentage
-  - name: Luck
+  condition: all the time
+- book:
+    name: Luck
     level: '2'
     buff:
       - attribute: Double Items Drop Rate
         value:
           number: 10
           unit: percentage
-  - name: Luck
+  condition: all the time
+- book:
+    name: Luck
     level: '3'
     buff:
       - attribute: Double Items Drop Rate
         value:
           number: 15
           unit: percentage
-  - name: Luck
+  condition: all the time
+- book:
+    name: Luck
     level: '4'
     buff:
       - attribute: Double Items Drop Rate
         value:
           number: 18
           unit: percentage
+  condition: all the time
