--- a/src/content/generalConflictData/sg3.yml
+++ b/src/content/generalConflictData/sg3.yml
@@ -11,77 +11,44 @@ others:
   - Khalid
   - My Guiying
 books:
-  - name: Siege Attack
-    level: '1'
-    buff:
-      - attribute: Attack
-        class: Siege
-        value:
-          number: 10
-          unit: percentage
-  - name: Siege Attack
-    level: '2'
-    buff:
-      - attribute: Attack
-        class: Siege
-        value:
-          number: 15
-          unit: percentage
-  - name: Siege Attack
-    level: '3'
-    buff:
-      - attribute: Attack
-        class: Siege
-        value:
-          number: 20
-          unit: percentage
-  - name: Siege Attack
-    level: '4'
-    buff:
-      - attribute: Attack
-        class: Siege
-        value:
-          number: 25
-          unit: percentage
-  - name: Siege HP
-    level: '1'
-    buff:
-      - attribute: HP
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 10
-          unit: percentage
-  - name: Siege HP
-    condition:
-      - When not mine
-    level: '2'
-    buff:
-      - attribute: HP
-        class: Siege
-        condition:
-          - When not mine
-        value:
-          number: 15
-          unit: percentage
-  - name: Siege HP
-    level: '3'
-    buff:
-      - attribute: HP
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 20
-          unit: percentage
-  - name: Siege HP
-    level: '4'
-    buff:
-      - attribute: HP
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 25
-          unit: percentage
+  - book:
+      name: Siege Attack Increase
+      level: '1'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 10
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Siege Attack Increase
+      level: '2'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 15
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Siege Attack Increase
+      level: '3'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 20
+            unit: percentage
+    condition: all the time
+  - book:
+      name: Siege Attack Increase
+      level: '4'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 25
+            unit: percentage
+    condition: all the time
+
