--- a/src/content/generalConflictData/sg3b.yml
+++ b/src/content/generalConflictData/sg3b.yml
@@ -9,43 +9,43 @@ others:
   - Mu Guiying
   - Emperor Qin Shihuang
 books:
-  - name: Siege Attack
-    level: '1'
-    buff:
-      - attribute: Attack
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 10
-          unit: percentage
-  - name: Siege Attack
-    level: '2'
-    buff:
-      - attribute: Attack
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 15
-          unit: percentage
-  - name: Siege Attack
-    level: '3'
-    buff:
-      - attribute: Attack
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 20
-          unit: percentage
-  - name: Siege Attack
-    level: '4'
-    buff:
-      - attribute: Attack
-        condition:
-          - When not mine
-        class: Siege
-        value:
-          number: 25
-          unit: percentage
+  - book:
+      name: Siege Attack Increase
+      level: '1'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 10
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Siege Attack Increase
+      level: '2'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 15
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Siege Attack Increase
+      level: '3'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 20
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: Siege Attack Increase
+      level: '4'
+      buff:
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 25
+            unit: percentage
+    condition: when not mine
