--- a/src/content/generalConflictData/sg5.yml
+++ b/src/content/generalConflictData/sg5.yml
@@ -6,39 +6,40 @@ others:
   - Genghis Khan
   - King Arthur
 books:
-  - name: March Size Increase
-    level: '1'
-    buff:
-      - attribute: March_Size_Capacity
-        condition:
-          - When not mine
-        value:
-          number: 3
-          unit: percentage
-  - name: March Size Increase
-    level: '2'
-    buff:
-      - attribute: March_Size_Capacity
-        condition:
-          - When not mine
-        value:
-          number: 6
-          unit: percentage
-  - name: March Size Increase
-    level: '3'
-    buff:
-      - attribute: March_Size_Capacity
-        condition:
-          - When not mine
-        value:
-          number: 9
-          unit: percentage
-  - name: March Size Increase
-    level: '4'
-    buff:
-      - attribute: March_Size_Capacity
-        condition:
-          - When not mine
-        value:
-          number: 12
-          unit: percentage
+  - book:
+      name: March Size Increase
+      level: '1'
+      buff:
+        - attribute: March_Size_Capacity
+          value:
+            number: 3
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: March Size Increase
+      level: '2'
+      buff:
+        - attribute: March_Size_Capacity
+          value:
+            number: 6
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: March Size Increase
+      level: '3'
+      buff:
+        - attribute: March_Size_Capacity
+          value:
+            number: 9
+            unit: percentage
+    condition: when not mine
+  - book:
+      name: March Size Increase
+      level: '4'
+      buff:
+        - attribute: March_Size_Capacity
+          value:
+            number: 12
+            unit: percentage
+    condition: when not mine
+
