first skill book name conflcit I've found

--- a/src/content/generals/Elizabeth I.yaml
+++ b/src/content/generals/Elizabeth I.yaml
@@ -14,7 +14,7 @@ general:
   level: '45'
   score_as: Archers
   books:
-    - Hammer of the Gauls
+    - Hammer of the Gauls - Elizabeth I
   specialities:
     - Ranged Troop Formation
     - Annihilation
