--- a/src/content/generals/Henry V.yaml
+++ b/src/content/generals/Henry V.yaml
@@ -14,7 +14,7 @@ general:
   level: '1'
   score_as: Archers
   books:
-    - Hammer of the Gauls
+    - Hammer of the Gauls - Henry V
   specialities:
     - Ranged Troop Formation
     - Bash
