--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,13 +7,21 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.10.2",
+    "@open-wc/testing": "^4.0.0",
+    "lit-analyzer": "^2.0.3",
     "vite": "^5.2.8"
   },
   "dependencies": {
+    "@lit-labs/ssr": "^3.2.2",
+    "@lit/context": "^1.1.2",
+    "@lit/task": "^1.0.1",
     "@metalsmith/collections": "^1.3.0",
     "@metalsmith/layouts": "^2.7.0",
     "@metalsmith/markdown": "^1.10.0",
     "@metalsmith/permalinks": "^3.0.1",
-    "metalsmith": "^2.6.3"
+    "lit": "^3.1.4",
+    "metalsmith": "^2.6.3",
+    "ts-lit-plugin": "^2.0.2"
   }
 }
