--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,15 +13,11 @@
     "vite": "^5.2.8"
   },
   "dependencies": {
+    "@11ty/eleventy": "^2.0.1",
     "@lit-labs/ssr": "^3.2.2",
     "@lit/context": "^1.1.2",
     "@lit/task": "^1.0.1",
-    "@metalsmith/collections": "^1.3.0",
-    "@metalsmith/layouts": "^2.7.0",
-    "@metalsmith/markdown": "^1.10.0",
-    "@metalsmith/permalinks": "^3.0.1",
     "lit": "^3.1.4",
-    "metalsmith": "^2.6.3",
     "ts-lit-plugin": "^2.0.2"
   }
 }
